--- a/docs/concepts/distributed-async-await.mdx
+++ b/docs/concepts/distributed-async-await.mdx
@@ -5,7 +5,7 @@ description: Explore the emerging concept of Distributed Async Await, which goes
 sidebar_label: Distributed Async Await
 sidebar_position: 1
 last_update:
-  date: "08-29-2024"
+  date: "10-02-2024"
 keywords:
   - Async Await
   - Cooperative Multitasking
@@ -14,6 +14,8 @@ keywords:
 tags:
   - concepts
 ---
+
+Distributed Async Await is the programming model that Resonate provides through the use of its SDK and Server.
 
 The concept of **Distributed Async Await** a.k.a **Durable Executions** is an emerging concept.
 However, an accurate and concise definition or description or articulation is not yet available.
