--- a/docs/concepts/durable-promise.mdx
+++ b/docs/concepts/durable-promise.mdx
@@ -4,7 +4,7 @@ title: Durable Promises
 sidebar_label: Durable Promises
 sidebar_position: 2
 last_update:
-  date: "09-09-2024"
+  date: "10-02-2024"
 tags:
   - concepts
   - durable-promises
@@ -12,59 +12,153 @@ tags:
 
 **What is a Durable Promise?**
 
-Durable promises are like regular promises but they persist in storage as a [REST resource](https://www.w3schools.in/restful-web-services/rest-resources#:~:text=What%20is%20The%20REST%20Resources,Text%20Files%2C%20Videos%2C%20etc.).
-They have a unique identity that lives beyond the execution of the underlying function.
-By doing this, if something goes wrong (like a power outage or network hiccup), the application can look back at the saved results, quickly skip to where it left off, and keep going as if nothing ever happened, making your application resilient to unexpected failures and gracefully recover.
+Durable promises are like regular promises but they persist in storage.
+They have a unique identity that lives beyond the execution of the underlying function execution.
+By doing persisting promises, if something goes wrong (like a power outage or network hiccup), the application can look back at the saved results, quickly skip to where it left off, and keep going as if nothing ever happened, making your application resilient to unexpected failures.
+
+This also enables functions in different processes to call and await on each other.
+See [Resonate Call Graphs](/concepts/call-graph) for learn more about how Resonate facilitates the execution of distributed functions in a single business process.
 
 ## Storage
 
 **Where are Durable Promises stored?**
 
-There are two places where a Durable Promise may be stored, locally or remotely.
+There are two places where a Durable Promise can be stored, locally or remotely.
 
 ### Local storage
 
-Local storage, sometimes referred to as "Local mode" is when the promise is stored in local memory.
+“Local storage, sometimes called "Local mode", stores Durable Promises in local memory.
+There are multiple ways to visualize this dynamic.
+
+The following is a component diagram of an [Application Node](/concepts/application-node) running in local mode:”
+
+![Diagram of an Application Node running in local mode](/img/single-application-node-local-storage.svg)
+
+The Application Node's local memory stores all Durable Promises.
+
+You can visualize this dynamic in another way through a sequence diagram:
 
 ![Local in memory promise storage diagram](/img/local-storage-promise.svg)
 
-This is in contrast to [Remote storage (Remote mode)](#remote-storage), and provides function level recovery.
-In other words, if a called function fails (throws an error, or rejects a promise) in local mode then it is retried within the bounds of the timeout budget.
+In the diagram above, promise 1 corresponding to the invocation of function 1 is stored in the local memory where the process is hosted.
+
+Local mode still provides function-level recovery.
+In other words, if a called function fails (throws an error or rejects a promise) in local mode, it is retried within the bounds of the timeout budget.
 
 ![Local in memory promise storage with a retry](/img/local-storage-promise-with-retry.svg)
 
-Use local storage when you require very low latency and are not concerned with the Application Node restarting the execution from scratch should it crash but you still want individual functions to be transparently retried if they fail.
+The following psuedocode example uses local storage.
+The main function (`f1()`) synchronously awaits on two other functions (`f2()` and `f3()`).
+
+```text
+fn f1(ctx: Context) {
+  await ctx.run(f2);
+  await ctx.run(f3);
+  return;
+}
+
+fn f2() {
+  // ...
+  return;
+}
+fn f3() {
+  // ...
+  return;
+}
+
+await resonate.run("f1", `your-proimise-id`);
+```
+
+This sequence graph could be visualized like the following:
+
+![Local storage swim lane sequence functions only](/img/local-storage-swim-lane-sequence-func-only.svg)
+
+The next level of detail could include the promises, which might look like this:
+
+![Local storage swim lane sequence](/img/local-storage-swim-lane-sequence.svg)
+
+Notice that this sequence graphs above do not include the Resonate Server (supervisor).
+If all the functions are meant to execute locally, within the same process, an Application Node may chose to rely soley on a local promise store.
+However, if you want `f1()`, `f2()`, or `f3()` to be resumable even if the process crashes, or the Application Node functions need to await on functions in other Application Nodes, then use [Remote mode](#remote-storage).
+
+#### When to use
+
+Local storage is ideal for starting out with Resonate.
+It enables you to integrate Distributed Async Await into a single Application Node without the overhead of running the Resonate Server.
+
+It also serves use cases where there is a requirement of very low latency on single Application Nodes that do not need to make any Remote Function Calls and are not concerned with the Application Node restarting the execution from scratch should it crash, but you still want individual functions to be transparently retried if they fail.
 
 Part 1 of the quickstart tutorials showcases this functionality:
 
-- [TypeScript SDK](/get-started/typescript-quickstart/part-1)
+- [TypeScript SDK quickstart Part 1](/get-started/typescript-quickstart/part-1)
 
 ### Remote storage
 
-Remote storage, sometimes referred to as "Remote mode", is when the promise is stored in the Resonate Server (the supervisor service).
+Remote storage, sometimes called "Remote mode", stores all Durable Promises in the Resonate Server (the supervisor service).
+Again, there are multiple ways to visualize this dynamic.
+
+The following is a component diagram of an Application Node running in remote mode:
+
+![Diagram of an Application Node running in remote mode](/img/single-application-node-with-server.svg)
+
+By default, the Resonate Server stores all Durable Promises in a database.
+Currently, to view all the promises stored in the Resonate Server, you can use the [Resonate CLI](/operate/cli-reference/commands/promise#search).
+
+:::note `durable=false`
+
+Depending on the requirements of the application, a Local Function Call (LFC) can choose to pass `durable=false`, bypassing the creation and storage of a Durable Promise.
+This is useful when the result of the function is not needed for recovery or when the function is idempotent and can be retried without side effects and extremely low latency is required.
+
+:::
+
+You can visualize this dynamic in another way through a sequence diagram:
 
 ![Remote promise storage diagram](/img/remote-storage-promise.svg)
 
-Using Remote storage enables the "distribution" aspect of Distributed Async Await and provides application-level (also known as "process-level") recovery.
+In the diagram above, promise 1 corresponding to the invocation of function 1 is stored in the Resonate Server.
 
-First, let's look at application-level recovery, for example when your (Application Node) crashes.
-Remote storage can ensure that when your process comes back up, any "in-progress" executions continue from where they left off.
+Consider the same psuedocode example as above:
+
+```text
+fn f1(ctx: Context) {
+  await ctx.run(f2);
+  await ctx.run(f3);
+  return;
+}
+
+fn f2() {
+  // ...
+  return;
+}
+fn f3() {
+  // ...
+  return;
+}
+
+await resonate.run("f1", `your-proimise-id`);
+```
+
+With Remote storage, the sequence would look like the following:
+
+![Remote storage swim lane sequence](/img/remote-storage-swim-lane-sequence.svg)
+
+This sequence shows what happens "under the hood" when a Resonate Server (supervisor) is used.
+
+Using Remote storage enables two things:
+
+1. It enables the "distribution" aspect of Distributed Async Await.
+2. It enables platform-level recovery.
+
+In regards to platform-level recovery, for example when your (Application Node) crashes, Remote storage can ensure that when your process comes back up, any "in-progress" executions continue from where they left off.
+It also enables the Call Graph to recover on a completely different Application Node.
 
 Part 2 of the quickstart tutorials showcases this functionality:
 
-- [TypeScript SDK](/get-started/typescript-quickstart/part-2)
-
-Using the same sequential function execution from the quickstart tutorial a sequential execution diagram might look this:
-
-![Remote promise storage diagram with retries](/img/remote-storage-promise-with-retries.svg)
-
-In the diagram above, notice how function 1 gets the result of function 2 from the Durable Promise after the process is restarted.
-That is because the result of function 2 was stored in promise 2 before the process crashed.
-This effectively resumes the execution of function 1 from where it left off.
+- [TypeScript SDK quickstart Part 2](/get-started/typescript-quickstart/part-2)
 
 Now let's look at the distribution aspect that is enabled by Remote storage.
 
-The remote use case involves a durable promise that is created by one process and completed by another distinct process.
+The remote use case involves a Durable Promise that is created by one process and completed by another distinct process.
 The primary purpose is to facilitate coordination between different processes or services, serving as the foundation for features like:
 
 - **Task framework**: Durable promises allow you to distribute tasks across multiple machines for parallel execution and collect the operations’ results.
@@ -75,8 +169,9 @@ The primary purpose is to facilitate coordination between different processes or
 
 ## Identity
 
-In distributed async/await applications, durable promises must have a unique identifier (ID).
-This ID is used to store the computational progress and final result of the execution, allowing it to resume seamlessly from where it left off if interrupted.
+Each Durable Promise must have a unique identifier (ID) that distinguishes it from other promises.
+
+This ID is used to map to a function invocation and store final result of the execution.
 
 ```ts title="purchase.ts"
 // UID uniquely identifies the purchase.
@@ -103,7 +198,7 @@ This behavior differs from regular executions and can lead to confusion if not h
 
 There are several approaches to ensure your Durable Promise IDs are unique but also readable and relevant.
 
-#### Date-Based
+**Date-based**
 
 One very common approach is to use the date as part of the naming scheme to. For example, if you have a durable promise that fetches and aggregates news articles on a daily basis, you could include the date in the ID format to ensure uniqueness and provide clear indication of when the execution occurred.
 
@@ -111,7 +206,7 @@ One very common approach is to use the date as part of the naming scheme to. For
 news_feed_YYYY-MM-DD
 ```
 
-#### Hierarchical
+**Hierarchical**
 
 You can use a hierarchical naming scheme similar to file system paths to represent the identity of a durable promise. The naming scheme can include information such as the environment, service, and specific execution details. For example:
 
@@ -119,7 +214,7 @@ You can use a hierarchical naming scheme similar to file system paths to represe
 staging/analytics/monthly-report/2023-05
 ```
 
-#### Platform-specific
+**Platform-specific**
 
 If your durable promises are running on a specific platform or orchestrator, you can incorporate the platform's identity concepts into the naming scheme. For example, if you are using Kubernetes, you can include the namespace, pod, and other relevant information:
 
@@ -127,7 +222,7 @@ If your durable promises are running on a specific platform or orchestrator, you
 k8s/staging/namespace/analytics/gpu/h100/monthly-report-2023-05
 ```
 
-#### Opaque with Metadata
+**Opaque with metadata**
 
 In this case, the durable promise ID is a randomly generated unique identifier, and you would store the associated metadata (such as environment, service, execution details) in a separate database that can be queried using the ID.
 
