--- a/docs/get-started/typescript-quickstart/part-1/index.mdx
+++ b/docs/get-started/typescript-quickstart/part-1/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: part-1
 sidebar_label: Part 1
-title: Resonate TypeScript quickstart tutorial • Part 1 🏴‍☠️
+title: Resonate TypeScript quickstart tutorial • Part 1
 description: Build a reliable summarization service using the Resonate TypeScript SDK. This step-by-step tutorial demonstrates how to leverage Durable Execution to handle application-level failures with local promise storage, automatic retries, and transparent execution management.
 last_update:
   date: "09-09-2024"
